--- a/Lab Assignment 3/package.json
+++ b/Lab Assignment 3/package.json
@@ -3,6 +3,8 @@
     "axios": "^1.6.8",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^8.3.2",
     "querystring": "^0.2.1",
     "spotify-web-api-node": "^5.0.2",
     "ytdl-core": "^4.11.5"
